--- a/sass/layout/_energy-section.sass
+++ b/sass/layout/_energy-section.sass
@@ -3,18 +3,23 @@
     color: $white
     max-width: 1920px
     margin: 0 auto
+    padding-bottom: 96px
     h1
         text-align: center
+        font-size: 48px
+        line-height: 56px
         padding: 64px 0px 117px 0px
 
     .energy-section__container
-        display: grid
-        grid-template-columns: 1fr 1fr
-        margin: 0 auto
-        justify-items: center
+        display: flex
+        //grid-template-columns: 1fr 1fr
+        flex-flow: row wrap
+        justify-content: space-between
         align-items: center
         gap: 128px 0px
         padding-bottom: 96px
+        max-width: 1704px
+        margin: 0 auto
 
     
         .container__image-one
@@ -35,10 +40,11 @@
                 padding-bottom: 12px
 
         .container__text:first-child
-            padding-left: 252px
+            //112px+32px je udaljenost od blokova
+            padding-left: 144px
         
         #container__text-two
-            padding-right: 252px
+            padding-right: 144px
 
         .container__image-two
             width: 696px
@@ -46,7 +52,11 @@
             background: $green
             img
                 padding-left: 32px
-        
+
+
+    .energy-section__button
+        display: flex
+        justify-content: center
         button
             font-size: 18px
             line-height: 21px
@@ -56,7 +66,6 @@
             border: none
             width: 264px
             height: 72px
-            grid-column: 1 / 3
             cursor: pointer
     
             p 
